@@ -518,3 +518,4 @@ seen. gmtime warning still there
 - Commited McSkaf's tab patch for win32
 - Possible fixed fdlist problem with default_fdlist
 - Added some numeric checking in m_server*
+- Made possible speedup of fdlist checking in s_bsd.c
